[package]
name = "panorama-reader"
version = "0.1.0"
authors = ["Bartłomiej Kamiński <fizyk20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atm-refraction = "0.3"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.2"
libflate = "0.1"
clap = "2.0"

[features]
default = ["atm-refraction/serialization"]
